k8s/nginx/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: activemq-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kubernetes/app-name: activemq-ui
      io.activemq/version: "5.10"
  template:
    metadata:
      labels:
        io.kubernetes/app-name: activemq-ui
        io.activemq/version: "5.10"
    spec:
      volumes:
        - name: activemq-ui-conf
          configMap:
            name: activemq-ui-conf
            defaultMode: 0644
      containers:
        - name: activemq-ui
          image: nginx:mainline-alpine3.17-slim
          resources:
            requests:
              cpu: 64m
              memory: 50Mi
            limits:
              cpu: 128m
              memory: 150Mi
          ports:
            - containerPort: 80
              name: ui
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: activemq-ui-conf
              #subPath: activemq-ui.conf
          args:
          - "sh"
          - "-c"
          - |
            rm -f /etc/nginx/conf.d/default.conf
            /docker-entrypoint.sh
             nginx -g 'daemon off;'
          readinessProbe:
            httpGet:
              port: ui
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              port: ui
            initialDelaySeconds: 25
            periodSeconds: 20
          startupProbe:
            httpGet:
              port: ui
            initialDelaySeconds: 10
            periodSeconds: 5
