k8s/nginx/activemq-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: activemq-ui
spec:
  type: ClusterIP
  selector:
    io.kubernetes/app-name: activemq-ui
    io.activemq/version: "5.10"
  ports:
  - name: amq-ui
    targetPort: ui
    port: 80
